# bbs-ansi-art

./: .gitignore  EDITOR_IMPLEMENTATION.md  README.md  pyproject.toml
docs/: ANSI_ART_LEARNINGS.md  ROADMAP.md
src/bbs_ansi_art/: __init__.py  cli.py  import_image.py
src/bbs_ansi_art/cli/: __init__.py  app.py  main.py
src/bbs_ansi_art/cli/core/: __init__.py  ansi_text.py  input.py  layout.py  shortcuts.py  terminal.py
src/bbs_ansi_art/cli/studio/: __init__.py  editor.py  viewer.py
src/bbs_ansi_art/cli/tui/: __init__.py  viewer.py
src/bbs_ansi_art/cli/widgets/: __init__.py  art_canvas.py  art_editor.py  base.py  color_palette.py  file_list.py  status_bar.py  swatch_palette.py
src/bbs_ansi_art/codec/: __init__.py  ansi_parser.py  cp437.py
src/bbs_ansi_art/core/: __init__.py  canvas.py  cell.py  color.py  constants.py  document.py  pixel.py
src/bbs_ansi_art/create/: __init__.py  builder.py  spec.py
src/bbs_ansi_art/edit/: __init__.py  cell_canvas.py  document.py  editable.py  pixel_canvas.py
src/bbs_ansi_art/io/: __init__.py  reader.py  writer.py
src/bbs_ansi_art/llm/: __init__.py  styles.py
src/bbs_ansi_art/render/: __init__.py  html.py  json_format.py  llm_text.py  terminal.py  text.py
src/bbs_ansi_art/repair/: __init__.py  cleaner.py
src/bbs_ansi_art/sauce/: __init__.py  reader.py  record.py  writer.py
src/bbs_ansi_art/transform/: __init__.py
tests/: __init__.py  conftest.py  test_cleaner.py  test_core.py  test_loading.py
