[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbs-ansi-art"
version = "0.1.0"
description = "Python library for ANSI art - create, view, convert, and repair BBS-era artwork"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian Krabach", email = "brian@krabach.com" }
]
keywords = [
    "ansi",
    "art",
    "ascii",
    "bbs",
    "terminal",
    "cp437",
    "sauce",
    "retro",
    "textmode"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
image = ["Pillow>=9.0"]
cli = ["typer>=0.12", "rich>=13.0"]
llm = ["anthropic>=0.40", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.0",
]
all = ["bbs-ansi-art[image,cli,llm]"]

[project.scripts]
bbs-ansi-art = "bbs_ansi_art.cli:main"

[project.urls]
Homepage = "https://github.com/bkrabach/bbs-ansi-art"
Documentation = "https://github.com/bkrabach/bbs-ansi-art#readme"
Repository = "https://github.com/bkrabach/bbs-ansi-art.git"
Issues = "https://github.com/bkrabach/bbs-ansi-art/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bbs_ansi_art"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "external: tests requiring external .ans files",
    "slow: slow-running tests",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.0",
]
